crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_sequence_in_called_def.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Item = (identifier) @name
Collect = {(Item) @item}* @items
Test = (parent (Collect))
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Item"
S5 "Collect"
S6 "Test"
S7 "identifier"
S8 "parent"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M2:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T1  ; item: Item
M2: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Item
N1: S5 → T4  ; Collect
N2: S6 → T4  ; Test

[entrypoints]
Collect = 10 :: T4
Item    = 06 :: T1
Test    = 15 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Item:
  06   ε                                    07
  07   !   (identifier) [Node Set(M0)]      09
  09                                        ▶

Collect:
  10   ε                                    11
  11   ε   [Arr]                            13
  13   ε                                    41, 25

Test:
  15   ε                                    16
  16   !   (parent)                         17
  17   ▽   (Collect)                        10 : 18
  18   △   _                                19
  19                                        ▶
  20   ε   [EndObj Push]                    22
  22   ε                                    47, 25
  24                                        ▶
  25   ε   [EndArr Set(M2)]                 24
  27   ε   [Set(M1)]                        20
  29   ε   [EndObj]                         27
  31   !   (Item)                           06 : 29
  32   ε   [Obj]                            31
  34   ε   [Obj]                            32
  36   ▷   _                                39
  37   ε                                    36, 25
  39   ε                                    34, 37
  41   !   _                                39
  42   ▷   _                                45
  43   ε                                    42, 25
  45   ε                                    34, 43
  47   ▷   _                                45
