crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_star.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (identifier)* @items
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   ε   [Arr]                            09
  09   ε                                    23, 16
  11   !   (identifier) [Node Push]         13
  13   ε                                    29, 16
  15                                        ▶
  16   ε   [EndArr Set(M0)]                 15
  18   ▷   _                                21
  19   ε                                    18, 16
  21   ε                                    11, 19
  23   !   _                                21
  24   ▷   _                                27
  25   ε                                    24, 16
  27   ε                                    11, 25
  29   ▷   _                                27
