crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_star_nongreedy.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (identifier)*? @items
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   ε   [Arr]                            10
  10   ε                                    17, 24
  12   !   (identifier) [Node Push]         14
  14   ε                                    17, 30
  16                                        ▶
  17   ε   [EndArr Set(M0)]                 16
  19   ▷   _                                22
  20   ε                                    17, 19
  22   ε                                    20, 12
  24   !   _                                22
  25   ▷   _                                28
  26   ε                                    17, 25
  28   ε                                    26, 12
  30   ▷   _                                28
