crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_struct_array.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (array {(identifier) @a (number) @b}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "items"
S4 "Test"
S5 "array"
S6 "number"
S7 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = ArrayStar(T1)  ; T1*
T3 = Struct  M2:1  ; { items }
T4 = Struct  M3:1  ; { a }
T5 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T2  ; items: T2
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T3  ; Test

[entrypoints]
Test = 06 :: T3

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (array)                          08
  08   ε   [Arr]                            10
  10   ε                                    33, 20
  12   ε   [EndArr Set(M2)]                 14
  14   △                                    19
  15   ε   [EndObj Push]                    17
  17   ε                                    39, 12
  19                                        ▶
  20   ε   [EndArr Set(M2)]                 19
  22   ▷   (number) [Node Set(M1)]          15
  24   !   (identifier) [Node Set(M0)]      22
  26   ε   [Obj]                            24
  28   ▷                                    31
  29   ε                                    28, 20
  31   ε                                    26, 29
  33   ▽                                    31
  34   ▷                                    37
  35   ε                                    34, 12
  37   ε                                    26, 35
  39   ▷                                    37
