crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__recursion_simple.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Expr = [
    Lit: (number) @value :: string
    Rec: (call_expression function: (identifier) @fn arguments: (Expr) @inner)
]
---
[strings]
S00 "Beauty will save the world"
S01 "value"
S02 "fn"
S03 "inner"
S04 "Lit"
S05 "Rec"
S06 "Expr"
S07 "number"
S08 "call_expression"
S09 "identifier"
S10 "function"
S11 "arguments"

[type_defs]
T0 = <Node>
T1 = <String>
T2 = Struct  M0:1  ; { value }
T3 = Struct  M1:2  ; { fn, inner }
T4 = Enum    M3:2  ; Lit | Rec
T5 = Struct  M5:1  ; { fn }
T6 = Struct  M6:1  ; { inner }

[type_members]
M0: S01 → T1  ; value: <String>
M1: S02 → T0  ; fn: <Node>
M2: S03 → T4  ; inner: Expr
M3: S04 → T2  ; Lit: T2
M4: S05 → T3  ; Rec: T3
M5: S02 → T0  ; fn: <Node>
M6: S03 → T4  ; inner: Expr

[type_names]
N0: S06 → T4  ; Expr

[entrypoints]
Expr = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Expr:
  06   ε                                    08
  07  ...  
  08   ε                                    16, 24
  10   ε   [Set(M2)]                        12
  12   △   _                                19
  13                                        ▶
  14  ...  
  15  ...  
  16   !   [Enum(M3)] (number) [Text Set(M0) EndEnum]  13
  19   ε   [EndEnum]                        13
  21   ▷   arguments: (Expr)                06 : 10
  22   ▽   function: (identifier) [Node Set(M1)]  21
  24   !   [Enum(M4)] (call_expression)     22
