crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__sequences_basic.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (parent {(a) (b)})
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "parent"
S3 "b"
S4 "a"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (parent)                         08
  08   ▽   (a)                              09
  09   ▷   (b)                              10
  10   △                                    11
  11                                        ▶
