crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__sequences_in_quantifier.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (parent {(a) (b)}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "parent"
S4 "b"
S5 "a"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (parent)                         08
  08   ε   [Arr]                            10
  10   ε                                    29, 21
  12   ε   [EndArr Set(M0)]                 14
  14   △   _                                20
  15  ...  
  16   ▷   (b) [Node Push]                  18
  18   ε                                    36, 12
  20                                        ▶
  21   ε   [EndArr Set(M0)]                 20
  23   !   (a)                              16
  24   ▷   _                                27
  25   ε                                    24, 12
  27   ε                                    23, 25
  29   ▽   _                                27
  30   ▷   _                                34
  31  ...  
  32   ε                                    30, 12
  34   ε                                    23, 32
  36   ▷   _                                34
